--- a/geometry-genius/index.html
+++ b/geometry-genius/index.html
@@ -14,28 +14,28 @@
         </header>
         <main>
             <!-- Main container -->
-            <div>
+            <div class="flex flex-col md:flex-row">
                 <!-- shape container -->
-                <div>
-                    <div class="card card-compact bg-base-100 w-96 shadow-xl">
+                <div class="flex-1 grid grid-cols-1 md:grid-cols-3 gap-10 mx-4">
+                    <div class="card card-compact bg-base-100 w-96 md:w-80 shadow-xl">
                         <figure>
                           <img
-                            src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                            alt="Shoes" />
+                            src="images/triangle.png"
+                            alt="triangle" />
                         </figure>
                         <div class="card-body">
                           <h2 class="card-title">Triangle</h2>
-                          <p>If a dog chews shoes whose shoes does he choose?</p>
+                          <p></p>
                           <div class="card-actions justify-end">
                             <button class="btn btn-primary">Buy Now</button>
                           </div>
                         </div>
                     </div>
-                    <div class="card card-compact bg-base-100 w-96 shadow-xl">
+                    <div class="card card-compact bg-base-100 w-96 md:w-80 shadow-xl">
                         <figure>
                           <img
-                            src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                            alt="Shoes" />
+                            src="images/rectangle.png"
+                            alt="rectangle" />
                         </figure>
                         <div class="card-body">
                           <h2 class="card-title">Rectangle</h2>
@@ -45,11 +45,25 @@
                           </div>
                         </div>
                     </div>
-                    <div class="card card-compact bg-base-100 w-96 shadow-xl">
+                    <div class="card card-compact bg-base-100 w-96 md:w-80 shadow-xl">
                         <figure>
                           <img
-                            src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                            alt="Shoes" />
+                            src="images/parallelogram.png"
+                            alt="parallelogram" />
+                        </figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Parallelogram</h2>
+                          <p>If a dog chews shoes whose shoes does he choose?</p>
+                          <div class="card-actions justify-end">
+                            <button class="btn btn-primary">Buy Now</button>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="card card-compact bg-base-100 w-96 md:w-80 shadow-xl">
+                        <figure>
+                          <img
+                            src="images/rhombus.png "
+                            alt="rhombus" />
                         </figure>
                         <div class="card-body">
                           <h2 class="card-title">Parallelogram</h2>
@@ -61,8 +75,8 @@
                     </div>
                 </div>
                 <!-- Calculation Area -->
-                <div>
-                    <h1 class="text-3xl">Area Calculation</h1>
+                <div class="border-2 border-white text-center rounded-xl p-4">
+                    <h1  class="text-3xl w-96 ">Area Calculation</h1>
                 </div>
             </div>
         </main>
