create input file

--- a/geometry-genius/index.html
+++ b/geometry-genius/index.html
@@ -23,10 +23,16 @@
                             src="images/triangle.png"
                             alt="triangle" />
                         </figure>
-                        <div class="card-body">
-                          <h2 class="card-title">Triangle</h2>
-                          <p></p>
-                          <div class="card-actions justify-end">
+                        <div class="card-body text-center">
+                          <h2 class="card-title pl-32 md:pl-28">Triangle</h2>
+                          <p>Area (A) =0.05 X b X h</p>
+                          <div>
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                          <span>Cm</span>
+                          <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                          <span>Cm</span>
+                          </div>
+                          <div class="card-actions justify-center">
                             <button class="btn btn-primary">Buy Now</button>
                           </div>
                         </div>
@@ -37,10 +43,16 @@
                             src="images/rectangle.png"
                             alt="rectangle" />
                         </figure>
-                        <div class="card-body">
-                          <h2 class="card-title">Rectangle</h2>
-                          <p>If a dog chews shoes whose shoes does he choose?</p>
-                          <div class="card-actions justify-end">
+                        <div class="card-body text-center">
+                          <h2 class="card-title pl-32 md:pl-28">Rectangle</h2>
+                          <p>Area (A) = w X I</p>
+                          <div>
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <span>Cm</span>
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <span>Cm</span>
+                          </div>
+                          <div class="card-actions justify-center">
                             <button class="btn btn-primary">Buy Now</button>
                           </div>
                         </div>
@@ -51,10 +63,16 @@
                             src="images/parallelogram.png"
                             alt="parallelogram" />
                         </figure>
-                        <div class="card-body">
-                          <h2 class="card-title">Parallelogram</h2>
-                          <p>If a dog chews shoes whose shoes does he choose?</p>
-                          <div class="card-actions justify-end">
+                        <div class="card-body text-center">
+                          <h2 class="card-title pl-32 md:pl-20">Parallelogram</h2>
+                          <p>Area (A) = w X I</p>
+                          <div>
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <span>Cm</span>
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <span>Cm</span>
+                          </div>
+                          <div class="card-actions justify-center">
                             <button class="btn btn-primary">Buy Now</button>
                           </div>
                         </div>
@@ -65,10 +83,16 @@
                             src="images/rhombus.png "
                             alt="rhombus" />
                         </figure>
-                        <div class="card-body">
-                          <h2 class="card-title">Parallelogram</h2>
-                          <p>If a dog chews shoes whose shoes does he choose?</p>
-                          <div class="card-actions justify-end">
+                        <div class="card-body text-center">
+                          <h2 class="card-title pl-32 md:pl-20">Rhombus   </h2>
+                          <p>Area (A) = w X I</p>
+                          <div>
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <span>Cm</span>
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <span>Cm</span>
+                          </div>
+                          <div class="card-actions justify-center">
                             <button class="btn btn-primary">Buy Now</button>
                           </div>
                         </div>
