--- a/geometry-genius/index.html
+++ b/geometry-genius/index.html
@@ -50,13 +50,14 @@
                           <h2 class="card-title pl-32 md:pl-28">Rectangle</h2>
                           <p>Area (A) = w X I</p>
                           <div>
-                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="firstIntput">
                             <span>Cm</span>
                             <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
                             <span>Cm</span>
                           </div>
+                          <p>Area: <span></span>cm <sup>2</sup></p>
                           <div class="card-actions justify-center">
-                            <button class="btn btn-primary">Buy Now</button>
+                            <button id="rec-calcu-btn" class="btn btn-primary">Calculate</button>
                           </div>
                         </div>
                     </div>
@@ -109,5 +110,6 @@
         </main>
     </body>
     <script src="scripts/triangle.js"></script>
+    <script src="scripts/rectangle.js"></script>
 </body>
 </html>
