--- a/geometry-genius/index.html
+++ b/geometry-genius/index.html
@@ -50,12 +50,12 @@
                           <h2 class="card-title pl-32 md:pl-28">Rectangle</h2>
                           <p>Area (A) = w X I</p>
                           <div>
-                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="firstIntput">
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="firstInput">
                             <span>Cm</span>
-                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="secondInput">
                             <span>Cm</span>
                           </div>
-                          <p>Area: <span></span>cm <sup>2</sup></p>
+                          <p>Area: <span id="rect_area"></span>cm <sup>2</sup></p>
                           <div class="card-actions justify-center">
                             <button id="rec-calcu-btn" class="btn btn-primary">Calculate</button>
                           </div>
