--- a/geometry-genius/index.html
+++ b/geometry-genius/index.html
@@ -71,13 +71,14 @@
                           <h2 class="card-title pl-32 md:pl-20">Parallelogram</h2>
                           <p>Area (A) = w X I</p>
                           <div>
-                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <input id="paraFirstInput" class="w-16 h-8 rounded-lg" type="number" name="" >
                             <span>Cm</span>
-                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="paraSecondInput">
                             <span>Cm</span>
                           </div>
+                          <p>Area: <span id="para-area"></span>cm <sup>2</sup></p>
                           <div class="card-actions justify-center">
-                            <button class="btn btn-primary">Buy Now</button>
+                            <button id="paraBtn" class="btn btn-primary">Calculate</button>
                           </div>
                         </div>
                     </div>
@@ -111,5 +112,6 @@
     </body>
     <script src="scripts/triangle.js"></script>
     <script src="scripts/rectangle.js"></script>
+    <script src="scripts/parallelogram.js"></script>
 </body>
 </html>
