--- a/geometry-genius/index.html
+++ b/geometry-genius/index.html
@@ -92,13 +92,14 @@
                           <h2 class="card-title pl-32 md:pl-20">Rhombus   </h2>
                           <p>Area (A) = w X I</p>
                           <div>
-                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="rhomFirstInput">
                             <span>Cm</span>
-                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="">
+                            <input class="w-16 h-8 rounded-lg" type="number" name="" id="rhomSecondText">
                             <span>Cm</span>
                           </div>
+                          <p>Area: <span id="rhpm-Area"></span>cm <sup>2</sup></p>
                           <div class="card-actions justify-center">
-                            <button class="btn btn-primary">Buy Now</button>
+                            <button id="rhom-btn" class="btn btn-primary">Calculate</button>
                           </div>
                         </div>
                     </div>
@@ -113,5 +114,6 @@
     <script src="scripts/triangle.js"></script>
     <script src="scripts/rectangle.js"></script>
     <script src="scripts/parallelogram.js"></script>
+    <script src="scripts/rhombus.js"></script>
 </body>
 </html>
