change some code

--- a/geometry-genius/index.html
+++ b/geometry-genius/index.html
@@ -36,7 +36,7 @@
                             <p>Area: <span id="area-value"></span>cm <sup>2</sup></p>
                           </div>
                           <div class="card-actions justify-center">
-                            <button class="btn btn-primary" id="Calculate-btn">Calculate</button>
+                            <button onclick="triangleCalculate()" class="btn btn-primary" id="Calculate-btn">Calculate</button>
                           </div>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                           </div>
                           <p>Area: <span id="para-area"></span>cm <sup>2</sup></p>
                           <div class="card-actions justify-center">
-                            <button id="paraBtn" class="btn btn-primary">Calculate</button>
+                            <button onclick="parallelogram()" id="paraBtn" class="btn btn-primary">Calculate</button>
                           </div>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                         </figure>
                         <div class="card-body text-center">
                           <h2 class="card-title pl-32 md:pl-20">Rhombus   </h2>
-                          <p>Area (A) = w X I</p>
+                          <p>Area (A) =0.5 X w X I</p>
                           <div>
                             <input class="w-16 h-8 rounded-lg" type="number" name="" id="rhomFirstInput">
                             <span>Cm</span>
@@ -99,7 +99,7 @@
                           </div>
                           <p>Area: <span id="rhpm-Area"></span>cm <sup>2</sup></p>
                           <div class="card-actions justify-center">
-                            <button id="rhom-btn" class="btn btn-primary">Calculate</button>
+                            <button onclick="calculateRhombusArea()" id="rhom-btn" class="btn btn-primary">Calculate</button>
                           </div>
                         </div>
                     </div>
